Fix an issue with an icon that was invisible

--- a/app/components/Tabs/style.css
+++ b/app/components/Tabs/style.css
@@ -89,8 +89,6 @@
 
   transform: translate(0, -50%);
 
-  background-image: url('../../assets/icons/close.svg');
-
   opacity: 0;
   transition: 0.1s;
 }
@@ -107,7 +105,6 @@
 .Tabs-tabCreateBtn {
   width: 2em;
   height: 2em;
-  background-image: url('../../assets/icons/add.svg');
 }
 
 .Tabs-content {
